# fastapi-jwt-app

./: README.md  main.py  pyproject.toml
src/api/: auth_api.py  user_api.py
