[tool.poetry]
name = "fastapi-jwt-app"
version = "0.1.0"
description = ""
authors = ["Satendra Kumar <satendrakumar06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
pyjwt = "^2.10.1"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
